// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountModal should display the fetching state by default 1`] = `
<React.Fragment>
  <AccountModalHeader
    account={null}
    accountsAndTriggers={
      Array [
        Object {
          "account": Object {
            "_id": "123",
            "name": "account 1",
          },
          "trigger": Object {
            "current_state": Object {},
            "id": "triggerid",
          },
        },
        Object {
          "account": Object {
            "_id": "account_2",
            "name": "account_2",
          },
          "trigger": Object {
            "id": "trigger_account2",
          },
        },
      ]
    }
    konnector={Object {}}
    showAccountSelection={true}
  />
  <ForwardRef(WithStyles)
    className="u-pb-2"
  >
    <div
      className="u-ta-center"
    >
      <ForwardRef
        size="xxlarge"
      />
    </div>
  </ForwardRef(WithStyles)>
</React.Fragment>
`;

exports[`AccountModal with an account should display the AccountSelect & Content if an account is there and we can change the selectedAccount 1`] = `
<React.Fragment>
  <AccountModalHeader
    account={
      Object {
        "_id": "123",
        "name": "account 1",
      }
    }
    accountsAndTriggers={
      Array [
        Object {
          "account": Object {
            "_id": "123",
            "name": "account 1",
          },
          "trigger": Object {
            "current_state": Object {},
            "id": "triggerid",
          },
        },
        Object {
          "account": Object {
            "_id": "account_2",
            "name": "account_2",
          },
          "trigger": Object {
            "id": "trigger_account2",
          },
        },
      ]
    }
    konnector={Object {}}
    showAccountSelection={true}
  />
  <ForwardRef(WithStyles)
    className="u-pt-0 u-pr-0 u-pl-0"
    style={
      Object {
        "paddingBottom": "var(--flagship-bottom-height)",
      }
    }
  >
    <KonnectorAccountWrapper
      account={
        Object {
          "_id": "123",
          "name": "account 1",
        }
      }
      addAccount={[Function]}
      initialTrigger={
        Object {
          "current_state": Object {},
          "id": "triggerid",
        }
      }
      konnector={Object {}}
      onAccountDeleted={[MockFunction]}
      showNewAccountButton={true}
    />
  </ForwardRef(WithStyles)>
</React.Fragment>
`;

exports[`AccountModal with an account should display the AccountSelect & Content if an account is there and we can change the selectedAccount 2`] = `
<React.Fragment>
  <AccountModalHeader
    account={
      Object {
        "_id": "account_2",
        "name": "account_2",
      }
    }
    accountsAndTriggers={
      Array [
        Object {
          "account": Object {
            "_id": "123",
            "name": "account 1",
          },
          "trigger": Object {
            "current_state": Object {},
            "id": "triggerid",
          },
        },
        Object {
          "account": Object {
            "_id": "account_2",
            "name": "account_2",
          },
          "trigger": Object {
            "id": "trigger_account2",
          },
        },
      ]
    }
    konnector={Object {}}
    showAccountSelection={true}
  />
  <ForwardRef(WithStyles)
    className="u-pt-0 u-pr-0 u-pl-0"
    style={
      Object {
        "paddingBottom": "var(--flagship-bottom-height)",
      }
    }
  >
    <KonnectorAccountWrapper
      account={
        Object {
          "_id": "account_2",
          "name": "account_2",
        }
      }
      addAccount={[Function]}
      initialTrigger={
        Object {
          "id": "trigger_account2",
        }
      }
      konnector={Object {}}
      onAccountDeleted={[MockFunction]}
      showNewAccountButton={true}
    />
  </ForwardRef(WithStyles)>
</React.Fragment>
`;
